# render-engine-json

./: .gitignore  README.md  pyproject.toml  test_JSONCollection.py  test_JSONPage_parser.py
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yaml
json/: collection.py  parsers.py
src/render_engine_json/: __init__.py  collection.py  parsers.py
tests/: test_JSONPage_parser.py
