[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_json"
dynamic = [ "version" ]
description = "JSON Parser and Collection for Render Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "render-engine >= 2023.12.1b3",
    "python-slugify"
]


[project.optional-dependencies]
dev=[
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_json/"
repository = "https://github.com/kjaymiller/render_engine_json/"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
src = ["src"]
ignore-init-module-imports = true

